# gatearwayman

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/: copilot-instructions.md
.github/workflows/: docker-image.yml
scripts/: extract-img-tag.sh
