[package]
name = "apimanager-service"
version = "0.1.3"
edition = "2021"

[build-dependencies]
dotenv = "0.15"
env_logger = "0.11.11"
log = "0.4.33"
walkdir = "2.5.0"
phf_codegen = "0.12.1"
mime-sniffer = "0.1.3"
mime_guess = "2.0.5"
# magic = { git = "https://github.com/robo9k/rust-magic", version = "0.16.2" }

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = { version="0.8.1"}
reqwest = "0.12.12"
dotenv = "0.15"
phf = { version = "0.12.1", default-features = false }
